[package]
name = "geopolars_gdal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdal = "0.13"
gdal-sys = "0.7"
polars = { version = "0.25", features = ["dtype-binary", "dtype-date", "dtype-datetime"] }
thiserror = { version = "1" }
