[package]
name = "polars_gdal"
version = "0.1.0"
edition = "2021"

[dependencies]
gdal = { git = "https://github.com/georust/gdal" }
gdal-sys = { git = "https://github.com/georust/gdal" }
polars = { version = "0.25", features = ["dtype-binary", "dtype-date", "dtype-datetime", "rows"] }
thiserror = { version = "1" }

[dev-dependencies]
polars = { version = "0.25", features = ["ipc"] }
